Opened 13 years ago
Closed 13 years ago
#2281 closed defect (fixed)
ffmpeg 0.7.14 and 0.8.13 fail to build on OS X 10.7 ('vqa_decode_chunk' should not return a value)
| Reported by: | Hanspeter Niederstrasser | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | 0.8.13 | Keywords: | build regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
The newly released 0.7.14 and 0.8.13 fail to build on OS X 10.7/Xcode 4.6/clang-4.2 with this error:
How to reproduce:
gcc -I. -I"/sw/build.build/ffmpeg-0.7.14-1/ffmpeg-0.7.14" -I/sw/include -D_ISOC99_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -DPIC -DHAVE_AV_CONFIG_H -I/sw/lib/libspeex1/include -I/sw/include -I/usr/X11R6/include -MD -std=c99 -fomit-frame-pointer -fPIC -I/sw/include/dirac -I/sw/include/freetype2 -I/sw/include -I/sw/include/schroedinger-1.0 -I/sw/include/liboil-0.3 -I/sw/include/SDL -D_GNU_SOURCE=1 -D_THREAD_SAFE -g -Wdeclaration-after-statement -Wall -Wno-parentheses -Wno-switch -Wdisabled-optimization -Wpointer-arith -Wredundant-decls -Wno-pointer-sign -Wcast-qual -Wwrite-strings -Wtype-limits -Wundef -Wmissing-prototypes -Wno-pointer-to-int-cast -O3 -fno-math-errno -fno-signed-zeros -Qunused-arguments -MMD -c -o libavcodec/vqavideo.o /sw/build.build/ffmpeg-0.7.14-1/ffmpeg-0.7.14/libavcodec/vqavideo.c
/sw/build.build/ffmpeg-0.7.14-1/ffmpeg-0.7.14/libavcodec/vqavideo.c:532:13: error: void function 'vqa_decode_chunk' should not return a value [-Wreturn-type]
return AVERROR_INVALIDDATA;
^ ~~~~~~~~~~~~~~~~~~~
/sw/build.build/ffmpeg-0.7.14-1/ffmpeg-0.7.14/libavcodec/vqavideo.c:560:13: error: void function 'vqa_decode_chunk' should not return a value [-Wreturn-type]
return AVERROR_INVALIDDATA;
^ ~~~~~~~~~~~~~~~~~~~
2 errors generated.
This failure does not happen on up to date ffmpeg-git, ffmpeg-1.1.2 or ffmpeg-1.0.4.
Git bisect between 0.7.14 and 0.7.13 suggests
2cac35086c9e103fa98960c546d5017e7363803a is the first bad commit
commit 2cac35086c9e103fa98960c546d5017e7363803a
Author: Michael Niedermayer <michaelni@gmx.at>
Date: Fri Jan 25 06:11:59 2013 +0100
vqavideo: check chunk sizes before reading chunks
Fixes out of array writes
Found-by: Mateusz "j00ru" Jurczyk and Gynvael Coldwind
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit ab6c9332bfa1e20127a16392a0b85a4aa4840889)
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
:040000 040000 a8d8af84de1e252b56e213059f30884095096202 4384d9e56a32124d3d9b9b68721ec7757352baf3 M libavcodec
This is my configure command:
../configure --prefix=/sw --arch=x86_64 \ --mandir=/sw/share/man \ --enable-shared \ --disable-static \ --enable-gpl \ --enable-version3 \ --disable-doc \ --enable-postproc \ --enable-swscale \ --enable-avfilter \ --enable-pthreads \ --enable-x11grab \ --disable-indev=jack \ --enable-bzlib \ --enable-libopencore-amrnb \ --enable-libopencore-amrwb \ --enable-libdirac \ --enable-libfreetype \ --disable-libgsm \ --enable-libmp3lame \ --enable-libopenjpeg \ --enable-libschroedinger \ --enable-libspeex \ --enable-libtheora \ --enable-libvorbis \ --enable-libvpx \ --enable-libx264 \ --enable-libxvid \ --enable-zlib \ --extra-cflags='-I/sw/include -I/usr/X11R6/include' \ --extra-ldflags='-L/sw/lib -L/usr/X11R6/lib' \ --cc=clang
Change History (3)
comment:1 by , 13 years ago
| Keywords: | build regression added |
|---|---|
| Priority: | normal → important |
| Version: | 0.8.12 → 0.8.13 |
comment:2 by , 13 years ago
comment:3 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in the 0.8 release branch, will be in the next 0.8 and 0.7 releases