vqavideo: fix return type

Fixes Ticket2281

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 1fd86f9a2136165205b0370d5a6e916499f1da7f)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>